@@ -8,6 +8,7 @@ export("geneSetCollectionURLfunction<-")
 export("org<-")
 export(GeneSetDb)
 export(addCollectionMetadata)
+export(addGeneSetMetadata)
 export(annotateGeneSetMembership)
 export(calculateIndividualLogFC)
 export(corplot)
