@@ -782,6 +782,84 @@ addCollectionMetadata <- function(x, xcoll, xname, value,
   x
 }
 
+#' Add metadata at the geneset level.
+#'
+#' This function adds/updates columns entries in the `geneSets(gdb)` table.
+#' If there already are defined meta values for the columns of `meta` in `x`,
+#' these will be updated with the values in `meta`.
+#'
+#' TODO: this should be a setReplaceMethod
+#'
+#' @md
+#' @export
+#'
+#' @param x a `GeneSetDb` object
+#' @param meta a `data.frame`-like object with `"collection"`, `"name"`, and
+#'   an arbitrary amount of columns to add as metadata for the genesets.
+#' @return the updated `GeneSetDb` object `x`.
+addGeneSetMetadata <- function(x, meta, ...) {
+  if (FALSE) {
+    x <- exampleGeneSetDb()
+    x@table[, something := rnorm(.N)]
+    idx <- sample(nrow(x@table), 5)
+    meta <- data.table(collection = x@table$collection[idx],
+                       name = x@table$name[idx],
+                       something = 1:5, var2 = letters[1:5])
+    mb <- rbind(
+      meta,
+      data.table(collection = "c10", name = "wut", something = 10, var2 = "z"))
+    meta <- mb
+  }
+
+  stopifnot(is(x, "GeneSetDb"))
+  k <- key(x@table)
+  stopifnot(is(meta, "data.frame"))
+  stopifnot(all(k %in% colnames(meta)))
+  special <- c("N", "n", "active")
+  special <- intersect(special, colnames(meta))
+  if (length(special)) {
+    warning("Ignoring the following protected columns in the meta table:\n",
+            paste(special, collapse = ","), immediate. = TRUE)
+  }
+
+  meta <- as.data.table(meta)
+  setkeyv(meta, k)
+
+  mdt <- unique(meta, by = k)
+  if (nrow(mdt) != nrow(meta)) {
+    stop("You have duplicate collection,name entries in the updated `meta` ",
+         "data.frame. This is currently not allowed.")
+  }
+
+  xtable <- copy(x@table)[, .idx. := 1:.N]
+  xref <- xtable[mdt]
+
+  bad.meta <- is.na(xref$N)
+  if (any(bad.meta)) {
+    warning(sum(bad.meta), " unknown gene sets in the meta update, ignoring.",
+            immediate. = TRUE)
+    xref <- xref[!bad.meta]
+    meta <- meta[!bad.meta]
+  }
+
+  mcols <- setdiff(colnames(meta), c(k, special))
+  if (length(mcols)) {
+    for (mc in mcols) {
+      idxs <- xref[[".idx."]]
+      vals <- meta[[mc]]
+      xtable[idxs, (mc) := vals]
+    }
+  }
+
+  stopifnot(
+    all.equal(xtable[, list(collection, name)], x@table[, list(collection, name)]),
+    all.equal(xtable$N, x@table$N))
+
+  x@table <- transform(xtable, .idx. = NULL)
+  x
+}
+
+
 ##' Appends two GeneSetDb objects togethter.
 ##'
 ##' @param x A \code{GeneSetDb} object
